// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`span > [ ] 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [],
          "data": {
            "hName": "span",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "span",
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 4,
      "line": 1,
      "offset": 3,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > [x] 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [
            {
              "position": {
                "end": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "x",
            },
          ],
          "data": {
            "hName": "span",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "span",
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 4,
      "line": 1,
      "offset": 3,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > complex _ 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [
            {
              "position": {
                "end": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "span ",
            },
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 12,
                      "line": 1,
                      "offset": 11,
                    },
                    "start": {
                      "column": 8,
                      "line": 1,
                      "offset": 7,
                    },
                  },
                  "type": "text",
                  "value": "span",
                },
              ],
              "position": {
                "end": {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "emphasis",
            },
            {
              "position": {
                "end": {
                  "column": 14,
                  "line": 1,
                  "offset": 13,
                },
                "start": {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
              },
              "type": "text",
              "value": " ",
            },
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 1,
                      "offset": 19,
                    },
                    "start": {
                      "column": 16,
                      "line": 1,
                      "offset": 15,
                    },
                  },
                  "type": "text",
                  "value": "span",
                },
              ],
              "position": {
                "end": {
                  "column": 22,
                  "line": 1,
                  "offset": 21,
                },
                "start": {
                  "column": 14,
                  "line": 1,
                  "offset": 13,
                },
              },
              "type": "strong",
            },
            {
              "position": {
                "end": {
                  "column": 23,
                  "line": 1,
                  "offset": 22,
                },
                "start": {
                  "column": 22,
                  "line": 1,
                  "offset": 21,
                },
              },
              "type": "text",
              "value": " ",
            },
            {
              "position": {
                "end": {
                  "column": 29,
                  "line": 1,
                  "offset": 28,
                },
                "start": {
                  "column": 23,
                  "line": 1,
                  "offset": 22,
                },
              },
              "type": "inlineCode",
              "value": "span",
            },
          ],
          "data": {
            "hName": "span",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "span",
          "position": {
            "end": {
              "column": 30,
              "line": 1,
              "offset": 29,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 30,
          "line": 1,
          "offset": 29,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > ignore-double-bracket 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "[[wikilink]]",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > ignored-bracket 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "[label]",
        },
      ],
      "position": {
        "end": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > inside-link-invalid 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "[span]",
            },
          ],
          "position": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "title": null,
          "type": "link",
          "url": "#href",
        },
      ],
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > inside-link-valid 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": " ",
            },
            {
              "attributes": {},
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 8,
                      "line": 1,
                      "offset": 7,
                    },
                    "start": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                  },
                  "type": "text",
                  "value": "span",
                },
              ],
              "data": {
                "hName": "span",
                "hProperties": {},
              },
              "fmAttributes": {},
              "name": "span",
              "position": {
                "end": {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "textComponent",
            },
          ],
          "position": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "title": null,
          "type": "link",
          "url": "#href",
        },
      ],
      "position": {
        "end": {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 17,
      "line": 1,
      "offset": 16,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > respect-gfm-check-list 1`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": false,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 13,
                      "line": 1,
                      "offset": 12,
                    },
                    "start": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "text",
                  "value": "task 1",
                },
              ],
              "position": {
                "end": {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": true,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 13,
                      "line": 2,
                      "offset": 25,
                    },
                    "start": {
                      "column": 7,
                      "line": 2,
                      "offset": 19,
                    },
                  },
                  "type": "text",
                  "value": "task 2",
                },
              ],
              "position": {
                "end": {
                  "column": 13,
                  "line": 2,
                  "offset": 25,
                },
                "start": {
                  "column": 7,
                  "line": 2,
                  "offset": 19,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 13,
              "line": 2,
              "offset": 25,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 13,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": {
        "end": {
          "column": 13,
          "line": 2,
          "offset": 25,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": {
    "end": {
      "column": 13,
      "line": 2,
      "offset": 25,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > respect-reference-style-link 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "link",
            },
          ],
          "identifier": "ref",
          "label": "ref",
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "referenceType": "full",
          "type": "linkReference",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "identifier": "ref",
      "label": "ref",
      "position": {
        "end": {
          "column": 26,
          "line": 3,
          "offset": 38,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "title": null,
      "type": "definition",
      "url": "http://example.com",
    },
  ],
  "position": {
    "end": {
      "column": 26,
      "line": 3,
      "offset": 38,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > simple 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [
            {
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "span",
            },
          ],
          "data": {
            "hName": "span",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "span",
          "position": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > with-attributes 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {
            "class": "aclass anotherclass andother",
            "foo": "bar",
            "id": "theid",
          },
          "children": [
            {
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "span",
            },
          ],
          "data": {
            "hName": "span",
            "hProperties": {
              "class": "aclass anotherclass andother",
              "foo": "bar",
              "id": "theid",
            },
          },
          "fmAttributes": {},
          "name": "span",
          "position": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 70,
          "line": 1,
          "offset": 69,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 70,
      "line": 1,
      "offset": 69,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`span > with-wikilinks 1`] = `
{
  "children": [
    {
      "children": [
        {
          "data": {
            "alias": "span",
            "exists": false,
            "hChildren": [
              {
                "type": "text",
                "value": "span",
              },
            ],
            "hName": "a",
            "hProperties": {
              "className": "internal new",
              "href": "#/page/span",
            },
            "permalink": "span",
          },
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "wikiLink",
          "value": "span",
        },
      ],
      "position": {
        "end": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
